tests/snapshots/tui_snapshot__tui_input_single_line.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)

  Welcome to Pi! Type a message to begin, or /help for commands.

  [single-line] Enter to send (Shift+Enter: newline, Alt+Enter: multi-line)
    > hello world
  >
  >

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
