tests/snapshots/tui_snapshot__tui_single_assistant_message.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:

    Hello from the assistant.



  [single-line] Enter to send (Shift+Enter: newline, Alt+Enter: multi-line)
    > Type your message... (Enter to send, Shift+Enter for newline, Ctrl+C twice to quit)
  >
  >

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
