tests/snapshots/tui_snapshot__tui_streaming_thinking.snap
---
source: tests/tui_snapshot.rs
assertion_line: 205
expression: view
---
  Pi (dummy/dummy-model)


  Assistant:
  Thinking: Considering options...
  Partial answer.

  ⣾  Processing...

  Tokens: 0 in / 0 out  |  Shift+Enter: newline  |  Alt+Enter: multi-line  |  /help  |  Ctrl+C: quit
